<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/lblCalculadoraSimple"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutBtn"
        android:layout_width="77dp"
        android:layout_height="200dp"
        android:layout_marginBottom="244dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnSumar"
            android:minHeight="48dp"
            app:srcCompat="@drawable/sumar"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btnRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnRestar"
            app:srcCompat="@drawable/restar"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnMultiplicar"
            app:srcCompat="@drawable/multiplicar"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnDividir"
            app:srcCompat="@drawable/dividir"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>